manifests/03-payment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  namespace: incident-lab
  labels:
    app: payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
      containers:
      - name: payment
        image: hashicorp/http-echo:1.0
        securityContext:
          allowPrivilegeEscalation: false
        args:
        - "-listen=:8080"
        - "-text=payment ok"
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "16Mi"
            cpu: "50m"
          limits:
            memory: "64Mi"
            cpu: "100m"
        readinessProbe:
          httpGet:
            path: /
            port: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: payment
  namespace: incident-lab
spec:
  selector:
    app: payment
  ports:
  - port: 8080
    name: health
